--- a/index.html
+++ b/index.html
@@ -1,66 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
 <head>
-  <title>Pamuk Hasat Merkezi</title>
+  <meta charset="UTF-8" />
+  <title>Pamuk Hasat Sensörü</title>
   <style>
-    body {
-      background: url('https://images.unsplash.com/photo-1570549717069-33bede3c2d4e') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
-      font-family: Arial;
-      text-align: center;
-      padding-top: 150px;
-      position: relative;
+    body { 
+      background: #0a1a1a; 
+      color: #fff; 
+      font-family: sans-serif; 
+      text-align: center; 
+      margin: 0; 
+      padding: 50px;
     }
-    h1 {
-      text-shadow: 0 0 10px black;
+    .veri { 
+      font-size: 24px; 
+      margin: 20px 0; 
     }
-    button {
-      padding: 12px 25px;
-      font-size: 18px;
-      background: #228B22;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      position: absolute;
-      left: 50%;
-      top: 60%;
-      transform: translate(-50%, -50%);
+    .uyari { 
+      color: #ff5e5e; 
+      font-size: 32px; 
+      font-weight: bold; 
+      margin: 30px 0; 
     }
-    button:hover {
-      background: #006400;
-    }
-    .info-btn {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
-      padding: 8px 15px;
-      font-size: 14px;
-      background: #006400;
-      color: white;
-      border: none;
-      border-radius: 5px;
+    button { 
+      background: #2b5e7a; 
+      color: white; 
+      border: none; 
+      padding: 15px 30px; 
+      font-size: 18px; 
+      border-radius: 8px; 
+      cursor: pointer; 
     }
   </style>
 </head>
 <body>
-  <h1>Pamuk Hasat Merkezi</h1>
-  <button onclick="leoKonuş()">Leo'dan Bildirim</button>
-  <button class="info-btn" onclick="bilgi()">Pamuk Bilgisi</button>
 
-  <script>
-    function leoKonuş() {
-      let mesaj = "Pamuk olgunlaştı. Üç gün içinde hasat yapın.";
-      let ses = new SpeechSynthesisUtterance(mesaj);
-      ses.lang = "tr-TR";
-      ses.rate = 0.95;
-      speechSynthesis.speak(ses);
-    }
+  <h1>Pamuk Hasat Sensörü</h1>
+  <div class="veri">Sıcaklık: 28°C</div>
+  <div class="veri">Nem: %42</div>
+  <div class="veri">Rüzgar: 12 km/saat</div>
 
-    function bilgi() {
-      alert("Pamuk, Şanlıurfa’da Temmuz-Eylül arası olgunlaşır. Beyaz, yumuşacık, pamuk gibi. Hasat zamanı geldiğinde, Leo seni uyarır.");
-    }
-  </script>
+  <div class="uyari">HASAT UYARISI</div>
+  <p>Pamuk çiçeği açtı. Üç gün içinde topla. Yoksa kalite düşer.</p>
+  <p>🌸➡️⏳</p>
+
+  <button>Tamam, bildirdim</button>
+
+  <br><br>
+  <small>Teknofest 2026 – Eymen Talha & Takım</small>
+
 </body>
 </html>
